<resources>
    <string name="app_name">TestBeetle</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_name">Enter name</string>
    <string name="number_of_beetles">Number of beetles:</string>
    <string name="score">Score: </string>
    <string name="score_0">Score: 0</string>
    <string name="info">Enter your name and</string>
    <string name="info2">number of beetles</string>
    <string name="info3">When the button is pressed</string>
    <string name="info4">The game will start, round</string>
    <string name="second">second</string>

</resources>