<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Start"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/green_medium_light">

    <TextView
        android:id="@+id/textViewInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="left"
        />
    <TextView
        android:id="@+id/textViewInfo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info2"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="left"

        />
    <TextView
        android:id="@+id/textViewInfo3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info3"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="left"

        />
    <TextView
        android:id="@+id/textViewInfo4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info4"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="left"
        android:inputType="textMultiLine"

        />
    <TextView
        android:id="@+id/textViewScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score_0"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="right"
        android:layout_marginTop="100dp"/>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_beetles"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="left" />

        <TextView
            android:id="@+id/editTextNumBeetles"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="right"
            android:layout_marginStart="10dp"/>

    </LinearLayout>





    <ImageButton
        android:id="@+id/buttonStartGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/play_icon"
        android:background="@color/green_medium_light"
        android:layout_marginTop="20dp"/>

</LinearLayout>